# Quintic-Spline

./: package.xml
q_spline/: CMakeLists.txt  package.xml
q_spline/src/: qspline.cpp
