<?xml version="1.0"?>
<package format="2">
    <name>q_spline</name>
    <version>0.0.0</version>
    <description>ROS package for spline interpolation</description>


    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>GPL3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>ecl_geometry</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>ecl_geometry</exec_depend>


</package>
