<?xml version="1.0"?>
<package format="2">
    <name>q_spline</name>
    <version>0.0.0</version>


    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>GPL3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>ecl_geometry</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>ecl_geometry</run_depend>


</package>
